--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ function handleCredentialResponse(response) {
                 <p>Kami menawarkan berbagai layanan optimasi SEO, mulai dari riset kata kunci, audit teknis, hingga backlink berkualitas. Semua strategi kami dirancang untuk meningkatkan peringkat website Anda secara organik di Google.</p>
                 <p><a href="" class="tbl-pink">Lihat Detail Layanan</a></p>      
             </div>
-            <img src="https://img.freepik.com/free-vector/digital-marketing-strategy_23-2148822854.jpg?w=740"/>
+            <img src="https://img.freepik.com/free-vector/search-engine-concept-illustration_114360-286.jpg?t=st=1739070847~exp=1739074447~hmac=c5caa99e3f6f8ac980cf6711db637d61c740cf7928bd015c3d7783f69174c5b7&w=740"/>
         </section>
 
         <!-- untuk tutors -->
